# ipc_examples

./: Cargo.toml  README.md
channel/: Cargo.toml
file/src/: lib.rs
mutex/: Cargo.toml
rpc/: Cargo.toml  build.rs  square.proto
rpc/proto/: square.proto
rpc/src/: lib.rs  square.rs  square_grpc.rs
shared_mem/: Cargo.toml
